--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Some website</title>
-</head>
+{{> head}}
 <body>
 	{{> header}}
 	<p>Some text ...</p>
