--- a/views/maintenance.hbs
+++ b/views/maintenance.hbs
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Maintenance</title>
-</head>
+{{> head}}
 <body>
 	<h1>Site is under maintenance</h1>
 	<p>The website is currently under maintenance, come back later.</p>
