--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Some website</title>
-</head>
+{{> head}}
 <body>
 	{{> header}}
-	<p>Portfolio page here</p>
+	<p>Projects page here</p>
 
 
 
